<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ttu_gold"
        android:gravity="bottom|left"
        android:orientation="vertical"
        android:paddingBottom="4dip"
        android:paddingLeft="24dip"
        android:paddingRight="24dip"
        android:paddingTop="24dip" >

        <TextView
            android:id="@+id/class_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textIsSelectable="true"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        style="@style/TextAppearance.EditEvent_LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:text="@string/label_hint_credit_hours" />

    <TextView
        android:id="@+id/credit_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:paddingLeft="8dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />

    <TextView
        style="@style/TextAppearance.EditEvent_LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:text="@string/label_times" />

    <TextView
        android:id="@+id/times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:paddingLeft="8dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />

    <TextView
        style="@style/TextAppearance.EditEvent_LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:text="@string/label_hint_crn" />

    <TextView
        android:id="@+id/crn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:paddingLeft="8dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />

</LinearLayout>